feat: bootstrap firebase hosting config

--- a/dustland.html
+++ b/dustland.html
@@ -6,6 +6,7 @@
   <title>Dustland: CRT Edition</title>
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&family=Oxanium:wght@400;600;700&family=Pixelify+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dustland.css" />
+  <script type="module" src="./scripts/hosting/firebase-bootstrap.js"></script>
 </head>
 <body>
   <div id="nanoStatus">
