--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -7,6 +7,7 @@
   <title>Adventure Construction Kit</title>
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dustland.css" />
+  <script type="module" src="./scripts/hosting/firebase-bootstrap.js"></script>
   <style>
     body {
       margin: 0;
