feat: add cloud action progress feedback

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -970,6 +970,7 @@
       <button id="cloudSave" class="btn" type="button" title="Save to the cloud" hidden>☁ Save</button>
       <button id="cloudPublish" class="btn" type="button" title="Publish for everyone" hidden>📢 Publish</button>
       <button id="cloudShare" class="btn" type="button" title="Share with collaborators" hidden>🔗 Share</button>
+      <span id="cloudActionStatus" class="quick-actions__status" aria-live="polite" hidden></span>
       <button id="playtestFloat" class="btn btn--primary" type="button" title="Playtest module (Ctrl+P)">▶ Playtest</button>
     </div>
   <script defer src="./scripts/event-bus.js"></script>
